bug 369560 - Change 'ASSERTION: *** XBL doc with no root element! Something went horribly wrong!' to NS_WARNING, since it can happen due to bad web content. p=Alex Vincent <ajvincent@gmail.com> r+sr=sicking